--- a/NassimEjja/Links.html
+++ b/NassimEjja/Links.html
@@ -8,6 +8,7 @@
 		<title>Links</title>
 	</head>
 	<body>
+	<div class="why">
 		<div class="nav">
 			<div class="image">
 				<a href="#"
@@ -82,5 +83,6 @@
 			</li>
 		</ul>
     </div>
+</div>
 	</body>
 </html>
