--- a/NelleFavoreel/schoolvisie.html
+++ b/NelleFavoreel/schoolvisie.html
@@ -73,7 +73,7 @@
 				</p>
 			</div>
 			<div class="schoolvisieFoto">
-				<img src="/images/De_speelplaats_van_het_Sint-Jan_Berchmanscollege_(secundair_onderwijs,_middelbare_school)_in_de_Ursulinenstraat_tijdens_de_opendeurdag_van_12_oktober_2019_2_(c)_Peter_Dhondt-BRUZZ.jpeg" />
+				<img src="/images/speelplaats.jpeg" />
 			</div>
 			<div class="bekwaam">
 				<h1>Bekwaam</h1>
