--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -5,7 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style_Home_Glory.css" />
-		<script src="Search.js"></script>
 		<title>Sint-Jan Berchmanscollege Brussel</title>
 	</head>
 	<body>
@@ -22,6 +21,7 @@
 				<div class="rechts"> 
                     <div class="menu">
                        <ul>
+                           <li><a href="/GloryMenga/home.html">Home</a></li>
                            <li><a href="/GloryMenga/home.html">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
