--- a/GloryMenga/Opvoedings.html
+++ b/GloryMenga/Opvoedings.html
@@ -21,6 +21,7 @@
                 <div class="rechts"> 
                     <div class="menu">
                        <ul>
+                           <li><a href="/GloryMenga/home.html">Home</a></li>
                            <li><a href="/GloryMenga/home.html">Over ons</a>
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
