--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style_Home_Glory.css" />
 		<title>Sint-Jan Berchmanscollege Brussel</title>
+		<script src="/Search.js"></script>
 	</head>
 	<body>
 		<!--Nav-->
@@ -50,9 +51,9 @@
                        </ul>
                    </div>
 					<div class="box">
-						<form id="search-form">
-							<input type="text" id="search-input" placeholder="Typ hier..."/>
-							<input type="submit"  value="Zoeken" />
+						<form>
+							<input type="text" id="searchInput" placeholder="Typ hier..."/>
+							<button type="submit" onclick="search()">Zoeken</button>
 						</form>
 					</div>
 				</div>
