--- a/NordineElOuafrasi/Studierichtingen/eco_wis.html
+++ b/NordineElOuafrasi/Studierichtingen/eco_wis.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economie-Wiskunde/title>
-    <link rel="stylesheet" href="eco_wis.html">
+    <title>Economie-Wiskunde</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="eerste_graad.css">
 </head>
 <body>
-    <!--Economie-Wiskunde-->
+    
     <h2>Economie-Wiskunde</h2> 
     <table>
         <tr>
@@ -100,8 +100,6 @@
             <td>4</td>
           </tr>
         
-    </table>
-
-     <!--Zie CSS-->
+    </table> 
 </body>
 </html>
