--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -8,55 +8,57 @@
     <title>Wie is wie?</title>
 </head>
 <body>
-    <div class="top">
-    <div class="nav">
-            <div class="image">
-                <a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue"></a>
-                <div class="txtI">
-                    <p>Sint-Jan Berchmanscollege</p>
-                </div>
-            </div>
-            
-            <div class="rechts"> 
-                 <div class="menu">
-                    <ul>
-                        <li><a href="/GloryMenga/home.html">Home</a></li>
-                        <li><a href="/GloryMenga/home.html">Over ons</a>
-                            <ul class="dropdown">
-                                <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
-                                <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-                                <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
-                                <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-                                <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
-                                <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Organisatie</a>
-                            <ul class="dropdown">
-                                <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
-                                <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                <li><a href="#">Privacybeleid</a></li>
-                                <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                <li><a href="#">Leefregels</a></li>
-                                <li><a href="#">Vacatures</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
-                        <div class="svg">
-                            <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
-                        </div>
-                    </ul>
-                </div>
-                <div class="box">
-                    <form>
-                        <input type="text" name="" placeholder="Typ hier...">
-                        <input type="submit" name="" value="Zoeken">
-                    </form>
-                </div>
-            </div>
-    </div>
-    </div>
+  <div class="end">
+   <!--Nav-->
+		<div class="top">
+			<div class="nav">
+				<div class="image">
+					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<div class="txtI">
+						<p>Sint-Jan Berchmanscollege</p>
+					</div>
+				</div>
+
+				<div class="rechts"> 
+                    <div class="menu">
+                       <ul>
+                           <li><a href="/GloryMenga/home.html">Home</a></li>
+                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                               <ul class="dropdown">
+                                   <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                                   <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+                                   <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                                   <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+                                   <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+                                   <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="#">Organisatie</a>
+                               <ul class="dropdown">
+                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+                                   <li><a href="#">Leefregels</a></li>
+                                   <li><a href="#">Vacatures</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+                           <div class="svg">
+                               <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                           </div>
+                       </ul>
+                   </div>
+					<div class="box">
+						<form>
+							<input type="text" id="searchInput" placeholder="Typ hier..."/>
+							<button type="submit" onclick="search()">Zoeken</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 
     <!--Schoolbestuur-->
     <div class="container2">
@@ -450,7 +452,7 @@
                         </p>
                 </div>
                 </div>
-
+              </div>
     <footer>
         <div class="foot">
             <div class="kader">
