--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -7,56 +7,58 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Historiek</title>
 	</head>
-   
+    <body>
     <!--Nav-->
-		<div class="top">
-			<div class="nav">
-				<div class="image">
-					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
-					<div class="txtI">
-						<p>Sint-Jan Berchmanscollege</p>
-					</div>
-				</div>
+	<div class="top">
+        <div class="nav">
+            <div class="image">
+                <a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+                <div class="txtI">
+                    <p>Sint-Jan Berchmanscollege</p>
+                </div>
+            </div>
 
-				<div class="rechts">
-					<div class="menu">
-						<ul>
-							<li><a href="Home.html">Home</a></li>
-							<ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Over ons</a>
-                                    <ul class="dropdown">
-                                        <li><a href="#">Opvoedingsproject</a></li>
-                                        <li><a href="#">Schoolvisie</a></li>
-                                        <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
-                                        <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-                                        <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
-                                        <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Organisatie</a>
-                                    <ul class="dropdown">
-                                        <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
-                                        <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                        <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                        <li><a href="#">Privacybeleid</a></li>
-                                        <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                        <li><a href="#">Leefregels</a></li>
-                                        <li><a href="#">Vacatures</a></li>
-                                    </ul>
-                                </li>
-					</div>
-					<div class="box">
-						<form>
-							<input type="text" name="" placeholder="Typ hier..." />
-							<input type="submit" name="" value="Zoeken" />
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
+            <div class="rechts"> 
+                <div class="menu">
+                   <ul>
+                       <li><a href="/GloryMenga/home.html">Over ons</a>
+                           <ul class="dropdown">
+                               <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                               <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+                               <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                               <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+                               <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+                               <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+                           </ul>
+                       </li>
+                       <li><a href="#">Organisatie</a>
+                           <ul class="dropdown">
+                               <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                               <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
+                               <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                               <li><a href="#">Privacybeleid</a></li>
+                               <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+                               <li><a href="#">Leefregels</a></li>
+                               <li><a href="#">Vacatures</a></li>
+                           </ul>
+                       </li>
+                       <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+                       <div class="svg">
+                           <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                       </div>
+                   </ul>
+               </div>
+                <div class="box">
+                    <form>
+                        <input type="text" name="" placeholder="Typ hier..." />
+                        <input type="submit" name="" value="Zoeken" />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 		<!--Nav-->
-   
+  
     <div class="content">
         <div class="title"><h1>Historiek</h1></div>
         <div>
@@ -154,6 +156,7 @@
                 </div>
         </div>
     </div>
+</div>
 </div>
 <footer>
     <div class="foot">
