--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -90,6 +90,9 @@
 				<div class="poster">
 					<img src="/images/Opendeurdag_2023.png" alt="" />
 				</div>
+				<div class="vid">
+				<video controls muted loop src="/Sint-jan5.mp4" width="1000" poster="/images/thumbnail.jpg"></video>
+				</div>
 			</div>
 			<div class="last">
 				<div class="einde">
