--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organisatie</title>
     <link rel="stylesheet" href="style_berkay.css">
+    <script src="/Search.js"></script>
 </head>
 <body>
     <div class="end">
