--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/BerkayUnutkan/style_berkay2.css">
+    <script src="/Search.js"></script>
     <title>Wie is wie?</title>
 </head>
 <body>
