--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -8,7 +8,6 @@
 		<title>Historiek</title>
 	</head>
 	<body>
-		<!--Nav-->
 		<div class="top">
 			<div class="nav">
 				<div class="image">
@@ -23,6 +22,7 @@
 				<div class="rechts">
 					<div class="menu">
 						<ul>
+							<li><a href="/GloryMenga/home.html">Home</a></li>
 							<li>
 								<a href="/GloryMenga/home.html">Over ons</a>
 								<ul class="dropdown">
@@ -70,8 +70,8 @@
 					</div>
 					<div class="box">
 						<form>
-							<input type="text" name="" placeholder="Typ hier..." />
-							<input type="submit" name="" value="Zoeken" />
+							<input type="text" id="searchInput" placeholder="Typ hier..." />
+							<button type="submit" onclick="search()">Zoeken</button>
 						</form>
 					</div>
 				</div>
