--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -32,7 +32,7 @@
 									<li>
 										<a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a>
 									</li>
-									<li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+									<li><a href="/NassimEjja/History.html">Historiek</a></li>
 									<li>
 										<a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a>
 									</li>
