--- a/NelleFavoreel/janBerchmans.html
+++ b/NelleFavoreel/janBerchmans.html
@@ -27,7 +27,7 @@
 								<ul class="dropdown">
 									<li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
 									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-									<li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+									<li><a href="/NassimEjja/History.html">Historiek</a></li>
 									<li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
 									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
 									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
