--- a/BerkayUnutkan/vacaturesberkay.html
+++ b/BerkayUnutkan/vacaturesberkay.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_berkay3.css">
+    <link rel="shortcut icon" href="/images/logo_navy_blue.png">
     <script src="/Search.js"></script>
     <title>Vacatures</title>
 </head>
 <body>
    <!--Nav-->
+		<!--Nav-->
 		<div class="top">
 			<div class="nav">
 				<div class="image">
-					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
@@ -35,13 +37,13 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
                                    <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
                                    <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="#">Leefregels</a></li>
-                                   <li><a href="#">Vacatures</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+                                   <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
                            <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
