--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/BerkayUnutkan/style_berkay2.css">
+    <link rel="shortcut icon" href="/images/logo_navy_blue.png">
     <script src="/Search.js"></script>
     <title>Wie is wie?</title>
 </head>
@@ -28,7 +29,7 @@
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
                                    <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-                                   <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                                   <li><a href="/NassimEjja/History.html">Historiek</a></li>
                                    <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
                                    <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
                                    <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
@@ -36,7 +37,7 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
                                    <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
                                    <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
                                    <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
