--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -8,6 +8,7 @@
 		<title>Historiek</title>
 	</head>
 	<body>
+		<!--Nav-->
 		<div class="top">
 			<div class="nav">
 				<div class="image">
@@ -43,9 +44,13 @@
 							<li>
 								<a href="#">Organisatie</a>
 								<ul class="dropdown">
-									<li><a href="inschrijvingen.html">Inschrijvingen</a></li>
 									<li>
-										<a href="/NordineElOuafrasi/index.html">Schoolkosten</a>
+										<a href="/BerkayUnutkan/inschrijvingen.html"
+											>Inschrijvingen</a
+										>
+									</li>
+									<li>
+										<a href="">Schoolkosten</a>
 									</li>
 									<li>
 										<a href="/NordineElOuafrasi/index.html">Studierichtingen</a>
@@ -78,6 +83,7 @@
 			</div>
 		</div>
 		<!--Nav-->
+
 		<div class="first-main">
 			<h1 class="title">Historiek</h1>
 		</div>
