--- a/BerkayUnutkan/vacaturesberkay.html
+++ b/BerkayUnutkan/vacaturesberkay.html
@@ -11,7 +11,6 @@
 </head>
 <body>
    <!--Nav-->
-		<!--Nav-->
 		<div class="top">
 			<div class="nav">
 				<div class="image">
@@ -29,7 +28,7 @@
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
                                    <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-                                   <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                                   <li><a href="/NassimEjja/History.html">Historiek</a></li>
                                    <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
                                    <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
                                    <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
@@ -37,9 +36,9 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
                                    <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
                                    <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
@@ -61,7 +60,7 @@
 				</div>
 			</div>
 		</div>
-    <!--Nav-->
+		<!--Nav-->
     <div class="container">  
         <div class="Opvoeding">
             <div class="OP">
@@ -121,17 +120,14 @@
             <div class="txtB">
                 <div class="txtBlauw">
                    <h1>Belangrijke info</h1>
-                   <a href="#"><p>Eerste schooldag</p></a>
-                   <a href="#"><p>Kalender</p></a>
-                   <a href="#"><p>Leertraject</p></a>
+                   <a href="/Privacyverklaring.pdf"><p>Privacybeleid</p></a>
+                   <a href="/schoolreglement2022-2023_def.pdf"><p>Schoolreglement</p></a>
+                   <a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"><p>Schoolkosten</p></a>
                 </div>
                 <div class="txtBlauw">
-                    <h1>Veelgestelde vragen</h1>
-                </div>
-                <div class="txtBlauw">
-                    <h1>Werken bij ons</h1>
-                    <a href="#"><p>Word leerkracht</p></a>
-                    <a href="#"><p>Alle Vacatures</p></a>
+                    <h1>Onze school</h1>
+                    <a href="/BerkayUnutkan/inschrijvingen.html"><p>Inschrijvingen</p></a>
+                    <a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
                 </div>
             </div>
         </div>
