--- a/BerkayUnutkan/wieiswie.html
+++ b/BerkayUnutkan/wieiswie.html
@@ -38,8 +38,8 @@
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
                                    <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
                                    <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
                                    <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 		</div>
-
+		<!--Nav-->
     <!--Schoolbestuur-->
     <div class="container2">
         <div class="hoofdtitel">
@@ -482,23 +482,20 @@
             </div>
         </div>
         <div class="blauw">
-            <div class="txtB">
-                <div class="txtBlauw">
-                   <h1>Belangrijke info</h1>
-                   <a href="#"><p>Eerste schooldag</p></a>
-                   <a href="#"><p>Kalender</p></a>
-                   <a href="#"><p>Leertraject</p></a>
-                </div>
-                <div class="txtBlauw">
-                    <h1>Veelgestelde vragen</h1>
-                </div>
-                <div class="txtBlauw">
-                    <h1>Werken bij ons</h1>
-                    <a href="#"><p>Word leerkracht</p></a>
-                    <a href="#"><p>Alle Vacatures</p></a>
-                </div>
-            </div>
-        </div>
+          <div class="txtB">
+              <div class="txtBlauw">
+                 <h1>Belangrijke info</h1>
+                 <a href="/Privacyverklaring.pdf"><p>Privacybeleid</p></a>
+                 <a href="/schoolreglement2022-2023_def.pdf"><p>Schoolreglement</p></a>
+                 <a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"><p>Schoolkosten</p></a>
+              </div>
+              <div class="txtBlauw">
+                  <h1>Onze school</h1>
+                  <a href="/BerkayUnutkan/inschrijvingen.html"><p>Inschrijvingen</p></a>
+                  <a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
+              </div>
+          </div>
+      </div>
     </footer>
 </body>
 </html>
