--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -14,7 +14,7 @@
 		<div class="top">
 			<div class="nav">
 				<div class="image">
-					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
@@ -28,7 +28,7 @@
                                <ul class="dropdown">
                                    <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
                                    <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-                                   <li><a href="/NassimEjja/OverOns.html">Historiek</a></li>
+                                   <li><a href="/NassimEjja/History.html">Historiek</a></li>
                                    <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
                                    <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
                                    <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
@@ -36,13 +36,13 @@
                            </li>
                            <li><a href="#">Organisatie</a>
                                <ul class="dropdown">
-                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+                                   <li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
                                    <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-                                   <li><a href="#">Leefregels</a></li>
-                                   <li><a href="#">Vacatures</a></li>
+                                   <li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+                                   <li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
                                </ul>
                            </li>
                            <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
