--- a/BerkayUnutkan/vacaturesberkay.html
+++ b/BerkayUnutkan/vacaturesberkay.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style_berkay3.css">
     <link rel="shortcut icon" href="/images/logo_navy_blue.png">
     <script src="/Search.js"></script>
-    <title>Vacatures</title>
+    <title>Vacatures | Sint-Jan Berchmanscollege</title>
 </head>
 <body>
    <!--Nav-->
@@ -20,7 +20,7 @@
 					</div>
 				</div>
 
-				<div class="rechts"> 
+				<div class="right"> 
                     <div class="menu">
                        <ul>
                            <li><a href="/GloryMenga/home.html">Home</a></li>
@@ -62,10 +62,10 @@
 		</div>
 		<!--Nav-->
     <div class="container">  
-        <div class="Opvoeding">
-            <div class="OP">
-                <div class="titel"><h1>Vacatures</h1></div>
-                <div class="subtitel"><h2>Wij zijn op zoek naar leerkrachten voor de volgende vakken:</h2></div>   
+        <div class="vacancies">
+            <div class="layer">
+                <div class="title"><h1>Vacatures</h1></div>
+                <div class="subtitle"><h2>Wij zijn op zoek naar leerkrachten voor de volgende vakken:</h2></div>   
                 <p>Meteen starten (3e trimester 2021): </p>
                     <li>Nederlands: 1e en 2e jaar</li>
                     <li>Aardrijkskunde: 1e en 2e jaar</li> 
@@ -76,15 +76,11 @@
                     <li>Aardrijkskunde: 1e - 2e graad</li>
                     <br>
                     <p>CV's en motiveringsbrieven kunnen verstuurd worden naar Anne-Sophie De Decker, directeur via adedecker@sint-jan-brussel.be.</p>
-                   
-
-                </p>
             </div>
-            <div class="vl">
-
+            <div class="line">
             </div>
-            <div class="fotoOP">
-                <img src="/images/teacher-her-aspiring-pupils.jpg" alt="Ignatius">
+            <div class="imageLayer">
+                <img src="/images/teacher-her-aspiring-pupils.jpg" alt="teacher">
             </div>
         </div>
         </div>
@@ -92,7 +88,7 @@
     <!--Footer-->
     <footer>
         <div class="foot">
-            <div class="kader">
+            <div class="frame">
                 <h1>Sint-Jan Berchmanscollege</h1>
                 <div class="icons">
                     <div class="icon">
@@ -102,29 +98,29 @@
                 </div>
                 <div class="icons">
                     <div class="icon">
-                        <img src="/images/location.png" alt="call">
+                        <img src="/images/location.png" alt="location">
                     </div>
                     <p>Ursulinenstraat 4 1000 Bruxelles</p>
                 </div>
                 <div class="icons">
                     <div class="icon">
-                        <img src="/images/mail.png" alt="call">
+                        <img src="/images/mail.png" alt="mail">
                     </div>
                     <p>secretariaat@sint-jan-brussel.be</p>
                 </div>
             </div>
-            <div class="wit">
+            <div class="white">
             </div>
         </div>
-        <div class="blauw">
+        <div class="blue">
             <div class="txtB">
-                <div class="txtBlauw">
+                <div class="txtBlue">
                    <h1>Belangrijke info</h1>
                    <a href="/Privacyverklaring.pdf"><p>Privacybeleid</p></a>
                    <a href="/schoolreglement2022-2023_def.pdf"><p>Schoolreglement</p></a>
                    <a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"><p>Schoolkosten</p></a>
                 </div>
-                <div class="txtBlauw">
+                <div class="txtBlue">
                     <h1>Onze school</h1>
                     <a href="/BerkayUnutkan/inschrijvingen.html"><p>Inschrijvingen</p></a>
                     <a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
