commit css style studierichtingen

--- a/NordineElOuafrasi/Studierichtingen/eco_ws.html
+++ b/NordineElOuafrasi/Studierichtingen/eco_ws.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Economische Wetenschappen</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
-    <!--Econnomische Wetenschappen pagina-->
-    <h2>Economoische Wetenschappen</h2>
+   <!--Econnomische Wetenschappen pagina-->
+    <div class="container">
+      <div class="sub-title">
+        <h2>Economoische Wetenschappen</h2>
+      </div>
+
     <table>
       <tr>
         <th>Vak</th>
@@ -108,7 +111,7 @@
         <td>32</td>
       </tr>
     </table>
-
+    <br><br>
   <h2>Wat valt er op</h2>
   <p>
   In deze richting ligt de klemtoon op Economie. Je krijgt een stevig pakket wiskunde daarbovenop.
@@ -116,12 +119,14 @@
   Je krijgt een lesuur meer Engels en Frans dan in de richtingen LA en GLA, maar je ziet wel dezelfde leerstof als in deze richtingen.
   In het vak Mens & Samenleving komen maatschappelijke en economische thema’s aan bod: je werkt rond sociale rechtvaardigheid, financiële en juridische geletterdheid, alsook digitale vaardigheden. Deze thema’s worden ook verder uitgewerkt tijdens een aantal projectdagen.
   </p>
-
+  <br><br>
   <h2>Profiel van de leerling</h2>
   <p>
       Je bent geïnteresseerd om je te verdiepen in economische thema’s. Zowel algemene economie als bedrijfswetenschappen komen aan bod. Je hoeft geen voorkennis te hebben van economie om te starten in deze richting.
       Je wil je tegelijkertijd ook verdiepen in wiskunde. Je ziet dezelfde leerstof als in de richting GLA, LA en NW. Tijdens de lessen wiskunde zullen we af en toe gedifferentieerd werken: zowel wie uitdaging als remediëring nodig heeft, kan zo aan zijn of haar trekken komen.
   </p>
+
+  <br><br>
 
   <h2>Vervolgrichtingen in de 3de graad</h2>
 
@@ -142,6 +147,10 @@
         </td>
       </tr>
     </table>
+    </div>
+    <br><br>
+    
+  
 
      <!--Zie CSS-->
 </body>
