--- a/NordineElOuafrasi/Studierichtingen/latijn.html
+++ b/NordineElOuafrasi/Studierichtingen/latijn.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latijn</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 
 </head>
 <body>
      <!--Latijn pagina-->
+    <div class="container">
+      <div class="sub-title">
+        <h2>Latijn</h2>
+      </div>
 
-     <h2>Latijn</h2>
      <table>
        <tr>
          <th>Vak</th>
@@ -116,6 +118,7 @@
        </tr>
      </table>
 
+<br><br>
    <h2>Wat valt er op</h2>
    <p>
    In deze brede richting ligt de klemtoon op Latijn. Je krijgt een stevig pakket wiskunde daarbovenop. De pakketten natuurwetenschappen (biologie, chemie, fysica en aardrijkskunde) zijn dezelfde als in de richting GLA en MT.
@@ -123,14 +126,14 @@
    In het vak Mens & Samenleving komen maatschappelijke en economische thema’s aan bod: je werkt rond sociale rechtvaardigheid, financiële en juridische geletterdheid, alsook digitale vaardigheden. Deze thema’s worden ook verder uitgewerkt tijdens een aantal projectdagen.
    Tijdens het vak ‘Talen (diff.)’ zetten we in op het oefenen van de vaardigheden in Nederlands of Frans, en Engels. Dit vak beoogt een positieve, meertalige attitude! Elke taal opent immers een deur naar een cultuur.
    </p>
-
+<br><br>
    <h2>Profiel van de leerling</h2>
    <p>
        Je bent geïnteresseerd om je te verdiepen in Latijn, en in de cultuur en denkpatronen van de Romeinen. Je vindt uitdaging in het leren begrijpen en lezen van Latijnse teksten. Je wil vanaf het vierde jaar kennis maken met de grote, Romeinse auteurs.
        Je wil je tegelijkertijd ook verdiepen in wiskunde. Je ziet dezelfde leerstof als in de richting GLA, NW en EW. Tijdens de lessen wiskunde zullen we af en toe ook gedifferentieerd werken: zowel wie uitdaging als remediëring nodig heeft, kan zo aan zijn of haar trekken komen.
        De richting Latijn is een brede richting: je hebt zowel een interesse in (klassieke) talen, als in wiskunde. Je leert er abstract denken, en zelfstandig en op verantwoordelijke manier werken.
    </p>
-
+<br><br>
    <h2>Vervolgrichtingen in de 3de graad</h2>
 
    <table>
@@ -150,6 +153,10 @@
          </td>
        </tr>
      </table>
+    </div>
+    
+    <br><br>
+     
       <!--Zie CSS-->
 </body>
 </html>
