--- a/NordineElOuafrasi/Studierichtingen/Moderne_talen.html
+++ b/NordineElOuafrasi/Studierichtingen/Moderne_talen.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moderne talen</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
     <!--Moderne talen pagina-->
-    <h2>Moderne talen</h2>
+    <div class="container">
+      <h2>Moderne talen</h2>
     <table>
       <tr>
         <th>Vak</th>
@@ -115,6 +115,8 @@
       </tr>
     </table>
 
+    <br><br>
+
   <h2>Wat valt er op</h2>
   <p>
      In deze richting ligt de klemtoon op de moderne talen, met name Nederlands, Engels, Frans en Duits. In het vak communicatiewetenschappen leer je kritisch reflecteren over de rol van (massa)media. Tegelijkertijd ga je creatief aan de slag met mediaconcepten en tools. Gedurende 14 van de 32 lesuren ben je dus intensief bezig met moderne talen.
@@ -123,11 +125,15 @@
      De 2 lesuren economie zijn een kennismakingspakket met algemene economie.
   </p>
 
+  <br><br>
+
   <h2>Profiel van de leerling</h2>
   <p>
      Je houdt erg van moderne talen en je wil je vaardigheden in de 4 moderne talen graag perfectioneren. Je bent mondig, creatief aangelegd, en wil leren kritisch nadenken over de rol van media in onze samenleving.
      Tegelijkertijd krijg je een stevig pakket wetenschappen, dat niet te onderschatten valt. Je hebt dus een oprechte interesse voor wetenschappen. Wat betreft wiskunde, voel je je voldoende uitgedaagd met een basispakket.
   </p>
+
+  <br><br>
 
   <h2>Vervolgrichtingen in de 3de graad</h2>
 
@@ -148,6 +154,10 @@
         </td>
       </tr>
     </table>
+    </div>
+
+    <br><br>
+    
      <!--Zie CSS-->
 </body>
 </html>
