--- a/NordineElOuafrasi/Studierichtingen/eco_mt.html
+++ b/NordineElOuafrasi/Studierichtingen/eco_mt.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Economie-Moderne talen</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
 
     <!--Economie-Moderne talen-->
-   
-    <h2>Economie-Moderne talen</h2>
+   <div class="container">
+    <div class="sub-title">
+      <h2>Economie-Moderne talen</h2>
+    </div>
+    
 
     <table>
         <tr>
@@ -92,6 +94,9 @@
           </tr>
 
     </table>
+   </div>
+   <br><br>
+    
 
      <!--Zie CSS-->
 
