--- a/NordineElOuafrasi/Studierichtingen/gr_la.html
+++ b/NordineElOuafrasi/Studierichtingen/gr_la.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grieks-Latijn</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
+
     <!--Grieks-Latijn-->
-    <h2>Grieks-Latijn</h2> 
+    <div class="container">
+
+      <div class="sub-title">
+          <h2>Grieks-Latijn</h2> 
+      </div>
+     
     <table>
         <tr>
             <th>Vak</th>
@@ -84,7 +89,8 @@
             <td>2</td>
           </tr>
     </table>
+  </div>
 
-     <!--Zie CSS-->
+  <br><br>
 </body>
 </html>
