--- a/NordineElOuafrasi/Studierichtingen/grieks_latijn_2_graad.html
+++ b/NordineElOuafrasi/Studierichtingen/grieks_latijn_2_graad.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grieks-Latijn</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
     <!---- Grieks-Latijn pagina -->
-    <h2>Grieks-Latijn</h2>
+    <div class="container">
+      <div class="sub-title">
+        <h2>Grieks-Latijn</h2>
+      </div>
+
     <table>
         <tr>
           <th>Vak</th>
@@ -94,6 +97,8 @@
 
         </tr>
       </table>
+
+      <br><br>
     
     <h2>Wat valt er op</h2>
     <p>
@@ -103,11 +108,15 @@
         Je merkt het: dit is een erg brede richting, met een klemtoon op (klassieke) talen en wiskunde.
     </p>
 
+    <br><br>
+
     <h2>Profiel van de leerling</h2>
     <p>
         Je hebt interesse in de taal, cultuur en denkpatronen van de oudheid. Je vindt uitdaging in het leren begrijpen en lezen van Griekse en Latijnse teksten. Je wil vanaf het vierde jaar kennis maken met de grote auteurs in beide talen. Daarnaast vind je het belangrijk om uitgedaagd te worden in het vak wiskunde.
         In deze richting leer je niet alleen abstract denken, maar het is bovendien erg belangrijk dat jezelfstandigleert werken en op verantwoordelijke manier leert studeren.  
     </p>
+
+    <br><br>
 
     <h2>Vervolgrichtingen in de 3de graad</h2>
 
@@ -128,7 +137,9 @@
           </td>
         </tr>
       </table>
+      <br><br>
 
-       <!--Zie CSS-->
+    </div>
+    
 </body>
 </html>
