--- a/NordineElOuafrasi/Studierichtingen/la_ws.html
+++ b/NordineElOuafrasi/Studierichtingen/la_ws.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Latijn-Wetenschappen</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
     <!--Latijn-Wetenschappen-->
-    <h2>Latijn-Wetenschappen</h2> 
+    <div class="container">
+      <h2>Latijn-Wetenschappen</h2> 
     <table>
         <tr>
             <th>Vak</th>
@@ -89,6 +89,8 @@
             <td>4</td>
           </tr>
     </table>
+    </div>
+    
      <!--Zie CSS-->
 </body>
 </html>
