--- a/NordineElOuafrasi/Studierichtingen/mt-wis.html
+++ b/NordineElOuafrasi/Studierichtingen/mt-wis.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moderne talen-Wiskunde</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
+  <div class="container">
     <!--Moderne talen-Wiskunde-->
     <h2>Moderne talen-Wiskunde</h2> 
     <table>
@@ -84,6 +84,10 @@
             <td>8</td>
           </tr>
     </table>
+  </div>
+
+  <br><br>
+    
      <!--Zie CSS-->
 </body>
 </html>
