--- a/NordineElOuafrasi/Studierichtingen/ws_wis.html
+++ b/NordineElOuafrasi/Studierichtingen/ws_wis.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wetenschappen</title>
-    <link rel="stylesheet" href="eerste_graad.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>Wetenschappen-Wiskunde</title>
+    <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
     <!--Wetenschappen-Wiskunde-->
-    <h2>Wetenschappen-Wiskunde</h2> 
+    <div class="container">
+      <h2>Wetenschappen-Wiskunde</h2> 
     <table>
         <tr>
             <th>Vak</th>
@@ -84,6 +84,10 @@
             <td>8</td>
           </tr>
     </table>
+    </div>
+
+    <br><br>
+    
      <!--Zie CSS-->
 </body>
 </html>
