--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>contact</title>
+		<title>Contact</title>
+		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
+		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
 		<link rel="stylesheet" href="style_Nelle.css" />
 	</head>
 	<body>
@@ -51,25 +53,77 @@
 							</div>
 						</ul>
 					</div>
-					<div class="box">
-						<form>
-							<input type="text" id="searchInput" placeholder="Typ hier..." />
-							<button type="submit" onclick="search()">Zoeken</button>
-						</form>
-					</div>
 				</div>
 			</div>
 		</div>
 		<!--Nav-->
+		<!--Hamburger-->
+		<div class="navErik">
+			<div class="image">
+				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+				<div class="txtI">
+					<p>Sint-Jan Berchmanscollege</p>
+				</div>
+			</div>
+			<!--    Made by Erik Terwan    -->
+			<!--   24th of November 2015   -->
+			<!--        MIT License        -->
+			<nav role="navigation">
+				<div id="menuToggle">
+					<!--
+	  A fake / hidden checkbox is used as click reciever,
+	  so you can use the :checked selector on it.
+	  -->
+					<input type="checkbox" />
+
+					<!--
+	  Some spans to act as a hamburger.
+	  
+	  They are acting like a real hamburger,
+	  not that McDonalds stuff.
+	  -->
+					<span></span>
+					<span></span>
+					<span></span>
+
+					<!--
+	  Too bad the menu has to be inside of the button
+	  but hey, it's pure CSS magic.
+	  -->
+					<ul id="menu">
+						<li><a>Over ons</a></li>
+						<li><a class="smally" href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+						<li><a class="smally" href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+						<li><a class="smally" href="/NassimEjja/History.html">Historiek</a></li>
+						<li><a class="smally" href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+						<li><a class="smally" href="/NelleFavoreel/motto.html">Motto</a></li>
+						<li><a class="smally" href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+						<li><a>Organisatie</a></li>
+						<li><a class="smally" href="inschrijvingen.html">Inschrijvingen</a></li>
+						<li><a class="smally" href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
+						<li><a class="smally" href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+						<li><a class="smally" href="#">Privacybeleid</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+						<li><a class="smally" href="#">Leefregels</a></li>
+						<li><a class="smally" href="#">Vacatures</a></li>
+						<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+						<div class="svg">
+							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+						</div>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<!--Hamburger-->
 
 		<div class="grid">
 			<div class="head">
 				<h1>Contact</h1>
 			</div>
-			<div class="locatieIcon">
+			<div class="locationIcon">
 				<img src="/images/home.png" />
 			</div>
-			<div class="locatie">
+			<div class="location">
 				<h3>Sint-Jan Berchmanscollege</h3>
 				<h3>Ursulinenstraat 4</h3>
 				<h3>1000 Brussel België</h3>
@@ -122,49 +176,5 @@
 				</div>
 			</div>
 		</div>
-		<footer>
-			<div class="foot">
-				<div class="kader">
-					<h1>Sint-Jan Berchmanscollege</h1>
-					<div class="icons">
-						<div class="icon">
-							<img src="/images/call.png" alt="call" />
-						</div>
-						<p>02/5120370</p>
-					</div>
-					<div class="icons">
-						<div class="icon">
-							<img src="/images/location.png" alt="call" />
-						</div>
-						<p>Ursulinenstraat 4 1000 Bruxelles</p>
-					</div>
-					<div class="icons">
-						<div class="icon">
-							<img src="/images/mail.png" alt="call" />
-						</div>
-						<p>secretariaat@sint-jan-brussel.be</p>
-					</div>
-				</div>
-				<div class="wit"></div>
-			</div>
-			<div class="blauw">
-				<div class="txtB">
-					<div class="txtBlauw">
-						<h1>Belangrijke info</h1>
-						<a href="#"><p>Eerste schooldag</p></a>
-						<a href="#"><p>Kalender</p></a>
-						<a href="#"><p>Leertraject</p></a>
-					</div>
-					<div class="txtBlauw">
-						<h1>Veelgestelde vragen</h1>
-					</div>
-					<div class="txtBlauw">
-						<h1>Werken bij ons</h1>
-						<a href="#"><p>Word leerkracht</p></a>
-						<a href="#"><p>Alle Vacatures</p></a>
-					</div>
-				</div>
-			</div>
-		</footer>
 	</body>
 </html>
