Studierichtingen titels opmaak CSS

--- a/NordineElOuafrasi/Studierichtingen/derde_graad.html
+++ b/NordineElOuafrasi/Studierichtingen/derde_graad.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="derde_graad.css">
 </head>
 <body>
-    <header>
-        <h1>Studierichtingen 3de graad</h1>
-    </header>
+
+    <div class="container-head">
+        <div class="head-title">
+            <h1>Studierichtingen 3de graad</h1>
+        </div>
+    </div>
 
     <div class="container">
         
