--- a/NordineElOuafrasi/Studierichtingen/eerste_graad.html
+++ b/NordineElOuafrasi/Studierichtingen/eerste_graad.html
@@ -8,66 +8,69 @@
     <link rel="stylesheet" href="gr_la.css">
 </head>
 <body>
-
+  <div class="container-head">
+    <div class="first-grade">
+      <div class="sub-title">
+        <h1>Eerste jaar 1ste graad </h1>
+      </div>
 <div class="container">
-  <div class="first-grade">
-    <div class="sub-title">
-      <h1>Eerste jaar 1ste graad </h1>
-        <h2>1A</h2>
+  
+      <h2>1A</h2>
+      <h3>Basisvorming (27u)</h3>
+    <table>
+        <tr>
+          <th>Vak</th>
+          <th>uur/week</th>
+        </tr>
+        <tr>
+          <td>Frans</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Nederlands</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Wiskunde</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td>Techniek</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Natuurwetenschappen</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Aardrijkskunde</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Mens & samenleving</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Geschiedenis</td>
+          <td>1</td>
+        </tr>
+        <tr>
+          <td>Lichamelijke opvoeding</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Beeld</td>
+          <td>2</td>
+        </tr>
+        <tr>
+          <td>Muziek</td>
+          <td>1</td>
+        </tr>
+      </table>
     </div>
-    <h3>Basisvorming (27u)</h3>
-  <table>
-      <tr>
-        <th>Vak</th>
-        <th>uur/week</th>
-      </tr>
-      <tr>
-        <td>Frans</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>Nederlands</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>Wiskunde</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>Techniek</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>Natuurwetenschappen</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>Aardrijkskunde</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>Mens & samenleving</td>
-        <td>1</td>
-      </tr>
-      <tr>
-        <td>Geschiedenis</td>
-        <td>1</td>
-      </tr>
-      <tr>
-        <td>Lichamelijke opvoeding</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>Beeld</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>Muziek</td>
-        <td>1</td>
-      </tr>
-    </table>
-  </div>
-  </div>
+    </div>
+</div>
+  
 
   
 
@@ -240,14 +243,16 @@
 </p>
 </div>
 
+<div class="container-head">
+  <div class="first-grade">
+    <div class="sub-title">
+      <h1>Tweede jaar</h1>
+    </div>
+
 <div class="container">
 
-  <div class="sub-title">
-    <h1>2de jaar</h1>
-      <h2>Basisoptie Moderne talen & Wetenschappen</h3>
-        <h3>25 uren basisvorming</h4>
-  </div>
-  
+  <h2>Basisoptie Moderne talen & Wetenschappen</h3>
+      <h3>25 uren basisvorming</h4>
 
 <table>
     <tr>
