--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -50,7 +50,9 @@
 										>
 									</li>
 									<li>
-										<a href="">Schoolkosten</a>
+										<a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"
+											>Schoolkosten</a
+										>
 									</li>
 									<li>
 										<a href="/NordineElOuafrasi/index.html">Studierichtingen</a>
