--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -108,7 +108,7 @@
     <section class="main2"> 
         <div class="registration-2">
         <div class="registration-class-2">
-                <h4 class="stappen">  Stap 1: Bereid je voor</h4>
+                <h4 class="steps">  Stap 1: Bereid je voor</h4>
                 <p>Wil je je kind inschrijven in het 1ste leerjaar van een secundaire school voor het schooljaar 2023-2024?
                      Dan moet je je kind altijd eerst aanmelden. Bereid je aanmelding goed voor:</p>
                 <ol>
