--- a/NelleFavoreel/contact.html
+++ b/NelleFavoreel/contact.html
@@ -186,7 +186,7 @@
 		<!--Footer-->
 		<footer>
 			<div class="foot">
-				<div class="kader">
+				<div class="frame">
 					<h1>Sint-Jan Berchmanscollege</h1>
 					<div class="icons">
 						<div class="icon">
@@ -207,27 +207,25 @@
 						<p>secretariaat@sint-jan-brussel.be</p>
 					</div>
 				</div>
-				<div class="wit"></div>
+				<div class="white"></div>
 			</div>
-			<div class="blauw">
+			<div class="blue">
 				<div class="txtB">
-					<div class="txtBlauw">
+					<div class="txtBlue">
 						<h1>Belangrijke info</h1>
-						<a href="#"><p>Eerste schooldag</p></a>
-						<a href="#"><p>Kalender</p></a>
-						<a href="#"><p>Leertraject</p></a>
+						<a href="/Privacyverklaring.pdf" target="_blank"><p>Privacybeleid</p></a>
+						<a href="/schoolreglement2022-2023_def.pdf" target="_blank"><p>Schoolregelment</p></a>
+						<a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank"><p>Schoolkosten</p></a>
 					</div>
-					<div class="txtBlauw">
-						<h1>Veelgestelde vragen</h1>
-					</div>
-					<div class="txtBlauw">
-						<h1>Werken bij ons</h1>
-						<a href="#"><p>Word leerkracht</p></a>
-						<a href="#"><p>Alle Vacatures</p></a>
+					<div class="txtBlue">
+						<h1>Onze school</h1>
+						<a href="/BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
+						<a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
 					</div>
 				</div>
 			</div>
 		</footer>
+		<!--Footer-->
 		<script>
 			function myFunction() {
 				var x = document.getElementById("menu");
