--- a/NassimEjja/inschrijving_respon.html
+++ b/NassimEjja/inschrijving_respon.html
@@ -106,7 +106,7 @@
         <h3 class="registration-title-2">Hoe inschrijven?</h3>
     </div>
     <section class="main2"> 
-        <div class="registration-2">
+        <div class="registration">
         <div class="registration-class-2">
                 <h4 class="stappen">  Stap 1: Bereid je voor</h4>
                 <p>Wil je je kind inschrijven in het 1ste leerjaar van een secundaire school voor het schooljaar 2023-2024?
