--- a/NelleFavoreel/jaarthema.html
+++ b/NelleFavoreel/jaarthema.html
@@ -97,6 +97,7 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
+						<li><a href="/GloryMenga/home.html">Home</a></li>
 						<li><a>Over ons</a></li>
 						<li><a class="smally" href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
 						<li><a class="smally" href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
@@ -105,13 +106,13 @@
 						<li><a class="smally" href="/NelleFavoreel/motto.html">Motto</a></li>
 						<li><a class="smally" href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
 						<li><a>Organisatie</a></li>
-						<li><a class="smally" href="inschrijvingen.html">Inschrijvingen</a></li>
-						<li><a class="smally" href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-						<li><a class="smally" href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-						<li><a class="smally" href="#">Privacybeleid</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+						<li><a class="smally" href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+						<li><a class="smally" href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+						<li><a class="smally" href="/Privacyverklaring.pdf">Privacybeleid</a></li>
 						<li><a class="smally" href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-						<li><a class="smally" href="#">Leefregels</a></li>
-						<li><a class="smally" href="#">Vacatures</a></li>
+						<li><a class="smally" href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
 						<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
 						<div class="svg">
 							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
