--- a/GloryMenga/home.html
+++ b/GloryMenga/home.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style_Home_Glory.css" />
 		<link rel="shortcut icon" href="/images/logo_navy_blue.png">
+		<link rel="stylesheet" href="/NelleFavoreel/menu.css">
 		<title>Sint-Jan Berchmanscollege Brussel</title>
 		<script src="/Search.js"></script>
 		<script src="/Hamburger.js"></script>
@@ -64,6 +65,65 @@
 			</div>
 		</div>
 		<!--Nav-->
+		<!--Hamburger-->
+		<div class="navErik">
+			<div class="image">
+				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+				<div class="txtI">
+					<p>Sint-Jan Berchmanscollege</p>
+				</div>
+			</div>
+			<!--    Made by Erik Terwan    -->
+			<!--   24th of November 2015   -->
+			<!--        MIT License        -->
+			<nav role="navigation">
+				<div id="menuToggle">
+					<!--
+	  A fake / hidden checkbox is used as click reciever,
+	  so you can use the :checked selector on it.
+	  -->
+					<input type="checkbox" onclick="myFunction()" />
+
+					<!--
+	  Some spans to act as a hamburger.
+	  
+	  They are acting like a real hamburger,
+	  not that McDonalds stuff.
+	  -->
+					<span></span>
+					<span></span>
+					<span></span>
+
+					<!--
+	  Too bad the menu has to be inside of the button
+	  but hey, it's pure CSS magic.
+	  -->
+					<ul id="menu" style="display: none">
+						<li><a href="/GloryMenga/home.html">Home</a></li>
+						<li><a>Over ons</a></li>
+						<li><a class="smally" href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+						<li><a class="smally" href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+						<li><a class="smally" href="/NassimEjja/History.html">Historiek</a></li>
+						<li><a class="smally" href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+						<li><a class="smally" href="/NelleFavoreel/motto.html">Motto</a></li>
+						<li><a class="smally" href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+						<li><a>Organisatie</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+						<li><a class="smally" href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+						<li><a class="smally" href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+						<li><a class="smally" href="/Privacyverklaring.pdf">Privacybeleid</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+						<li><a class="smally" href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
+						<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+						<div class="svg">
+							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
+						</div>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<!--Hamburger-->
 		<div class="container">
 			<div class="home">
 				<div class="txtS">
@@ -148,5 +208,15 @@
 			</div>
 		</footer>
 		<!--Footer-->
+		<script>
+			function myFunction() {
+				var x = document.getElementById("menu");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+				} else {
+					x.style.display = "block";
+				}
+			}
+		</script>
 	</body>
     </html>
